# SpeakerVerification

./: .env  .gitignore  .gitmodules  DatasetLoader.py  SpeakerNet.py  dataprep.py  example.env  example.secrets.env  new_data_struct.md  nohup.out  nohup_small  nohup_small_8  nohuptrain_17Jan  nohuptrain_8Jan_128  pyproject.toml  requirements.txt  test.py  tmp  trainSpeakerNet.py
.devcontainer/: devcontainer.json  setup.sh
.scripts/: download_dataset.sh
configs/: ResNetSE34L_AP.yaml
configs/dataset/: MEL__F_512__M_40__W_0.025s__H_0.01s.yml  RAW.yml  SPEC__F_512__W_0.025s__H_0.01s.yml
data/augmentation/lists/: dataset.yml
data/voxceleb1/lists/: dataset.yml
data/voxceleb1/lists/sv/: small.txt
data/voxceleb2/lists/: dataset.yml
dataset/generator/: base.py  vox1.py  vox2.py
jupyter/: test.py  tests.ipynb
jupyter/dataset/: converter.ipynb  generate.ipynb  generate.py
lists/: meta_voxceleb1.txt  meta_voxceleb2.txt  voxceleb1_small.txt  voxceleb2_small.txt
scripts/: download_dataset.sh
speaker_verification/: DatasetLoader.py  SpeakerNet.py  main.py  trainSpeakerNet.py
speaker_verification/dataset/: config.py  downloader.py  generator.py  handler.py  loader.py  utils.py
speaker_verification/dataset/generator/: base.py  vox1.py  vox2.py
speaker_verification/dataset/loader/: base.py
speaker_verification/models/: ResNetSE34L.py
